# monkeytype

monk_minal_rust/: Cargo.toml  LICENSE  README.md  allWords.json  quotes.json
monk_minal_rust/data/: allWords.json  quotes.json
monk_minal_rust/src/: config.rs  data_loader.rs  game.rs  main.rs
