[package]
name = "monk_minal_rust"
version = "0.1.0"
edition = "2021"
authors = ["shikhar13012001"]
description = "A terminal-based typing tutor written in Rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
figlet-rs = "0.1.5"
anyhow = "1.0"
dialoguer = { version = "0.11.0", features = ["colorful"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossterm = "0.27"
rand = "0.8"
textwrap = "0.16"
indicatif = "0.17" # Not actively used for spinner, but part of previous setup
log = "0.4"
